tests/characterization/snapshots/characterization__top_level_help__no_arguments.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 0)"
---
exit: 0
--- stdout ---
Usage:
  oqtopus <command> [args]

Commands:
  init         Create an OQTOPUS environment.
  cloud-local  Manage local cloud-local components and services.
  backend      Manage local backend components and services.
  completion   Print shell completion scripts.
  version      Print the installed CLI version.
  help         Show help.

Run 'oqtopus <command> help' for command-specific help.
--- stderr ---
--- end ---
